ErrorProne must be handled differently